--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MyNotes</string>
+    <string name="enter_a_note">Enter a note</string>
+    <string name="submit">Submit</string>
 </resources>
