Added My Notes title in the activity_main.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="submit">Submit</string>
     <string name="the_quick_brown_fox_jumps_over_the_lazy_dog">The quick brown fox jumps over the lazy dog</string>
     <string name="delete_button">Delete Button</string>
+    <string name="my_notes">My Notes</string>
 </resources>
